Prevent hardcode in create-post.ejs

--- a/views/pages/panel/create-post.ejs
+++ b/views/pages/panel/create-post.ejs
@@ -11,7 +11,7 @@
         <%categories.forEach(category => {%>
         <li>
           <a
-            href="/post/create?slug=<%=category.slug%>"
+            href="?slug=<%=category.slug%>"
             class="w-100 p-3 d-block bg-light text-dark">
             <span
               class="ti ti-<%=category.icon%> nav-small-cap-icon fs-4"></span>
